src/test/ui/span/issue-33884.stderr
error[E0308]: mismatched types
  --> $DIR/issue-33884.rs:16:22
   |
16 |     stream.write_fmt(format!("message received"))
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `std::fmt::Arguments`, found struct `std::string::String`
   |
   = note: expected type `std::fmt::Arguments<'_>`
              found type `std::string::String`
   = note: this error originates in a macro outside of the current crate

error: aborting due to previous error(s)

